--- a/package.json
+++ b/package.json
@@ -57,5 +57,8 @@
   },
   "simple-git-hooks": {
     "pre-commit": "npx nano-staged"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
   }
 }
