chore: Update npm test script to use 'nr build' instead of 'nr build && node dist/index.js'

--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   },
   "scripts": {
     "build": "tsup",
-    "postinstall": "nr build && node dist/index.js",
+    "test": "nr build && node dist/index.js",
     "release": "bumpp  --commit 'release: install-vscode-recommended-plugins v'"
   },
   "devDependencies": {
