chore: move rslog to dependencies

--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
     "build": "tsup",
     "release": "bumpp  --commit 'release: install-vscode-recommended-plugins v'"
   },
+  "dependencies": {
+    "rslog": "^1.2.2"
+  },
   "devDependencies": {
     "@antfu/ni": "^0.23.0",
     "@types/node": "^22.5.2",
@@ -51,7 +54,6 @@
     "picocolors": "^1.0.1",
     "pnpm": "^9.9.0",
     "prettier": "^3.3.3",
-    "rslog": "^1.2.2",
     "simple-git-hooks": "^2.11.1",
     "tsup": "^8.2.4",
     "typescript": "^5.5.4"
